--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <section id="phone">
+            <iframe src="home.html" frameborder="0" id="tela" name="tela"></iframe>
 
         </section>
         <section id="redes">
