--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
             width: 100vw;
             height: 100vh;
             background: url(images/tela-home.jpg) black no-repeat top center;
+            background-size: cover;
             
         }
 
