--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
 <body>
     <main>
         <section id="phone">
-            <iframe src="home.html" frameborder="0" id="tela" name="tela"></iframe>
+            <iframe src="home.html" frameborder="0" id="tela" name="tela">
+                Seu navegador não é compativel com isso.
+            </iframe>
 
         </section>
-        <section id="redes">
+        <section id="redes-sociais">
+            <a href="#" target="tela"> <img src="images/logo-home.jpg" alt="logo-home"></a><br>
+            <a href="#" target="tela" > <img src="images/logo-facebook.jpg" alt="logo-facebook"></a><br>
+            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="#" target="tela"><img src="images/logo-github.jpg" alt="github"></a><br>
+            <a href="#" target="tela"><img src="images/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt="youtube"></a>
 
         </section>
     </main>
