--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"> <img src="images/logo-home.jpg" alt="logo-home"></a><br>
-            <a href="images/tela-facebook.jpg" target="tela" > <img src="images/logo-facebook.jpg" alt="logo-facebook"></a><br>
-            <a href="#" target="tela"><img src="images/logo-instagram.jpg" alt="instagram"></a><br>
-            <a href="#" target="tela"><img src="images/logo-github.jpg" alt="github"></a><br>
-            <a href="#" target="tela"><img src="images/logo-twitter.jpg" alt="twitter"></a><br>
-            <a href="#" target="tela"><img src="images/logo-youtube.jpg" alt="youtube"></a>
+            <a href="facebook.html" target="tela" > <img src="images/logo-facebook.jpg" alt="logo-facebook"></a><br>
+            <a href="instagram.html" target="tela"><img src="images/logo-instagram.jpg" alt="instagram"></a><br>
+            <a href="github.html" target="tela"><img src="images/logo-github.jpg" alt="github"></a><br>
+            <a href="twitter.html" target="tela"><img src="images/logo-twitter.jpg" alt="twitter"></a><br>
+            <a href="youtube.html" target="tela"><img src="images/logo-youtube.jpg" alt="youtube"></a>
 
         </section>
     </main>
