--- a/youtube.html
+++ b/youtube.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>youtube</title>
-    <link rel="stylesheet" href=".style/redes.css">
+    <link rel="stylesheet" href="style/redes.css">
 </head>
 <body>
     <img src="images/tela-youtube.png" alt="youtube">
